plugins {
    id 'java'
    id "jacoco"
    id "org.sonarqube" version "2.7"
}

group 'io.github.saifali'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
}
jacoco {
    toolVersion = "0.8.3"
    reportsDir = file("$buildDir/customJacocoReportDir")
}

jacocoTestReport {
    reports {
        html.enabled  true
    }
}

test.finalizedBy jacocoTestReport